@@ -2,6 +2,8 @@
 v6.0.1-git
 ----------
 
+[mms] Fix expanding folder list in dynamic view when opening a mailbox and
+      folder expansion is not saved in the prefs (Bug #11609).
 [mms] Fix displaying HTML signature preference on identities preference page.
 [mms] Fix dynamic view loading in IE8 (Bug #11614).
 [mms] Optimize permission checking when creating a mailbox if no limit exists
